# comfy-skill

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yaml
api/: Dockerfile  cloud_router.py  comfyui_client.py  pyproject.toml  queue_manager.py  server.py
api/workflows/: flux_canny.json  flux_depth.json  flux_dev_img2img.json  flux_dev_txt2img.json  flux_fill_inpaint.json  flux_kontext.json  flux_schnell_txt2img.json  sdxl_txt2img.json  upscale_ultrasharp.json  wan_video_i2v.json
comfyui/: Dockerfile  entrypoint.sh  extra_model_paths.yaml
docs/: flux2.md  hidream-i1.md
skill/generate-image/: SKILL.md
skill/generate-image/scripts/: generate_image_img2img_job.py  generate_image_inpaint_job.py  generate_image_job.py  generate_image_upscale_job.py  generate_image_video_job.py
