[project]
name = "openclaw-images-api"
version = "0.1.0"
description = "REST API for AI image generation via ComfyUI with cloud fallback"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "websockets>=13",
    "Pillow>=10",
    "fal-client>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
